--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       border-radius: 6px;
       margin-top: 10px;
     }
+    <meta name="google-site-verification" content="xxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
   </style>
 </head>
 <body>
