--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مصطفى ربيع شفيق - نحات شاب</title>
+  <title>مصطفى ربيع شفيق ( ربيع شفيق )  - نحات شاب</title>
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -48,7 +48,7 @@
 </head>
 <body>
   <header>
-    <h1>مصطفى ربيع شفيق</h1>
+    <h1> ( ربيع شفيق )  مصطفى ربيع شفيق </h1>
     <p>نحات شاب من الفيوم - طالب بالمعهد العالي للعلوم الإدارية (قسم المحاسبة)</p>
   </header>
   <main>
