--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مصطفى ربيع شفيق ( ربيع شفيق )  - نحات شاب</title>
-  <style>
+  <title>ربيع شفيق | مصطفى ربيع | النحات المصري الشاب | مصطفى ربيع شفيق</title>
+
+  <!-- تحسينات SEO -->
+  <meta name="description" content="ربيع شفيق - مصطفى ربيع شفيق - نحات شاب مصري من الفيوم. حاصل على جوائز فنية ويشارك في المعارض القومية. شاهد أعماله وتواصل معه.">
+  <meta name="keywords" content="ربيع شفيق, مصطفى ربيع, مصطفى ربيع شفيق, النحات ربيع شفيق, النحات مصطفى ربيع, فنان مصري, نحات شاب, الفيوم, فن تشكيلي, صالون الشباب, مركز الحرية للإبداع" />
+  <meta name="google-site-verification" content="xxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
+
+  <!-- بطاقات المشاركة في السوشيال -->
+  <meta property="og:title" content="ربيع شفيق | مصطفى ربيع | نحات مصري شاب">
+  <meta property="og:description" content="اكتشف أعمال النحات مصطفى ربيع شفيق، الحاصل على جوائز فنية ومشارك في صالون الشباب ومركز الحرية."> 
+    
+    <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f9f9f9;
