--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>ربيع شفيق | مصطفى ربيع | النحات المصري الشاب | مصطفى ربيع شفيق</title>
 
   <!-- تحسينات SEO -->
-  <meta name="description" content="ربيع شفيق - مصطفى ربيع شفيق - نحات شاب مصري من الفيوم. حاصل على جوائز فنية ويشارك في المعارض القومية. شاهد أعماله وتواصل معه.">
+  <meta name="description" content="ربيع شفيق - مصطفي ربيع - نحات شاب مصري من الفيوم. حاصل على جوائز فنية ويشارك في المعارض القومية. شاهد أعماله وتواصل معه.">
   <meta name="keywords" content="ربيع شفيق, مصطفى ربيع, مصطفى ربيع شفيق, النحات ربيع شفيق, النحات مصطفى ربيع, فنان مصري, نحات شاب, الفيوم, فن تشكيلي, صالون الشباب, مركز الحرية للإبداع" />
   <meta name="google-site-verification" content="DU0yvHOce8QGmQfs_58KN4klFgMq0vW52q5XewyhSEo" />
   <!-- بطاقات المشاركة في السوشيال -->
   <meta property="og:title" content="ربيع شفيق | مصطفى ربيع | نحات مصري شاب">
-  <meta property="og:description" content="اكتشف أعمال النحات مصطفى ربيع شفيق، الحاصل على جوائز فنية ومشارك في صالون الشباب ومركز الحرية."> 
+  <meta property="og:description" content="اكتشف أعمال النحات ربيع شفيق، الحاصل على جوائز فنية ومشارك في صالون الشباب ومركز الحرية."> 
     
     <style>
     body {
@@ -57,7 +57,7 @@
 </head>
 <body>
   <header>
-    <h1> ( ربيع شفيق )  مصطفى ربيع شفيق </h1>
+    <h1> ربيع شفيق </h1>
     <p>نحات شاب من الفيوم - طالب بالمعهد العالي للعلوم الإدارية (قسم المحاسبة)</p>
   </header>
   <main>
@@ -70,12 +70,14 @@
       <ul>
         <li>مشاركة في صالون الشباب – الدورة 35 لعام 2024</li>
         <li>مشاركة في مسابقة الشباب للفنون التشكيلية – الدورة 11 بمركز الحرية للإبداع لعام 2025</li>
-        <li>حاصل على الجائزة الثانية مناصفة – مسابقة الشباب للفنون التشكيلية الدورة 11 لعام 2025</li>
+        <li>حاصل على الجائزة الثانية  – مسابقة الشباب للفنون التشكيلية الدورة 11 لعام 2025</li>
+        <li>مشاركة ف ملتقي بصمة المبدعين باتيلية القاهرة لعام 2025</li>
+        <li> مشاركة ف النسخة الثانية من الفن يجمعنا art egypt ف قاعة الاهرام للفنون لعام 2025 </li>
       </ul>
     </section>
     <section>
-      <h2>معرض أعمال</h2>
-      <img src="https://instagram.fcai1-1.fna.fbcdn.net/v/t51.2885-15/e35/273171203_4861338236333337_7832623158556425458_n.jpg" alt="عمل فني - مصطفى ربيع شفيق" />
+      <h2>بعض الأعمال</h2>
+      <img src="https://www.instagram.com/reel/DKFJ_6otJwQ/?igsh=MTIyYTlqanYzanA0eg==" alt="عمل فني - مصطفى ربيع شفيق" />
     </section>
     <section>
       <h2>التواصل</h2>
