--- a/index.html
+++ b/index.html
@@ -3,84 +3,115 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ربيع شفيق | مصطفى ربيع | النحات المصري الشاب | مصطفى ربيع شفيق</title>
+  <title>ربيع شفيق | الفنان ربيع شفيق | النحات مصطفى ربيع شفيق</title>
 
-  <!-- تحسينات SEO -->
-  <meta name="description" content="ربيع شفيق - مصطفي ربيع - نحات شاب مصري من الفيوم. حاصل على جوائز فنية ويشارك في المعارض القومية. شاهد أعماله وتواصل معه.">
-  <meta name="keywords" content="ربيع شفيق, مصطفى ربيع, مصطفى ربيع شفيق, النحات ربيع شفيق, النحات مصطفى ربيع, فنان مصري, نحات شاب, الفيوم, فن تشكيلي, صالون الشباب, مركز الحرية للإبداع" />
-  <meta name="google-site-verification" content="DU0yvHOce8QGmQfs_58KN4klFgMq0vW52q5XewyhSEo" />
-  <!-- بطاقات المشاركة في السوشيال -->
-  <meta property="og:title" content="ربيع شفيق | مصطفى ربيع | نحات مصري شاب">
-  <meta property="og:description" content="اكتشف أعمال النحات ربيع شفيق، الحاصل على جوائز فنية ومشارك في صالون الشباب ومركز الحرية."> 
-    
-    <style>
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
-      margin: 0; padding: 0;
-      color: #222;
-    }
-    header {
-      background-color: #34495e;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    main {
-      max-width: 700px;
-      margin: 30px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 12px #ccc;
-    }
-    h1, h2 {
-      margin-top: 0;
-    }
-    section {
-      margin-bottom: 25px;
-    }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 6px;
-      margin-top: 10px;
-    }
-    <meta name="google-site-verification" content="xxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
+  <!-- SEO -->
+  <meta name="description" content="ربيع شفيق - الفنان والنحات مصطفى ربيع شفيق. أعمال برونزية معاصرة مثل تمثال لاعب التنس وتمثال الباندا. شاهد الصور وتواصل للتعاون أو الطلب.">
+  <meta name="keywords" content="ربيع شفيق, الفنان ربيع شفيق, النحات مصطفى ربيع, تمثال لاعب التنس, تمثال باندا, الفن التشكيلي, نحت برونزي, الفيوم" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Social Cards -->
+  <meta property="og:title" content="ربيع شفيق | الفنان ربيع شفيق | النحات مصطفى ربيع شفيق">
+  <meta property="og:description" content="اكتشف بعض أعمال الفنان ربيع شفيق، مثل تمثال لاعب التنس وتمثال الباندا، وتم التواصل معه مباشرة لطلب الأعمال.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/mostafarabea3/mostafarabea3.github.io/main/images/IMG_20250106_151640_040.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ar_AR" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "ربيع شفيق",
+    "alternateName": "مصطفى ربيع شفيق",
+    "jobTitle": "نحات وفنان تشكيلي",
+    "birthDate": "2004-05-20",
+    "birthPlace": "الفيوم, مصر",
+    "url": "https://mostafarabea3.github.io",
+    "sameAs": [
+      "https://www.instagram.com/mostaf3a.rabe3a",
+      "https://www.facebook.com/mostafa.rabea.205"
+    ],
+    "hasPart": [
+      {
+        "@type": "CreativeWork",
+        "name": "تمثال لاعب التنس",
+        "image": "https://raw.githubusercontent.com/mostafarabea3/mostafarabea3.github.io/main/images/IMG_20250106_151640_040.jpg",
+        "description": "تمثال برونزي تجريدي يعكس الحركة الرياضية للاعب التنس - من أعمال ربيع شفيق"
+      },
+      {
+        "@type": "CreativeWork",
+        "name": "تمثال باندا",
+        "image": "https://raw.githubusercontent.com/mostafarabea3/mostafarabea3.github.io/main/images/IMG_20241011_122324_549.jpg",
+        "description": "تمثال باندا برونزي بأسلوب تعبيري حديث - من أعمال ربيع شفيق"
+      }
+    ]
+  }
+  </script>
+
+  <style>
+    body {font-family: "Segoe UI", Tahoma, sans-serif; background:#f9f9f9; margin:0; color:#222;}
+    header {background:#34495e; color:#fff; padding:20px; text-align:center;}
+    nav a {color:#fff; margin:0 8px; text-decoration:none;}
+    nav a:hover {text-decoration:underline;}
+    main {max-width:800px; margin:30px auto; background:#fff; padding:20px; border-radius:8px; box-shadow:0 0 12px #ccc;}
+    img {max-width:100%; border-radius:6px; margin-top:10px;}
+    section {margin-bottom:30px;}
+    figure {margin:20px 0;}
+    figcaption {text-align:center; font-style:italic; color:#555;}
   </style>
 </head>
 <body>
   <header>
-    <h1> ربيع شفيق </h1>
-    <p>نحات شاب من الفيوم - طالب بالمعهد العالي للعلوم الإدارية (قسم المحاسبة)</p>
+    <h1>ربيع شفيق</h1>
+    <p>الفنان والنحات المصري الشاب (مصطفى ربيع شفيق)</p>
+    <nav>
+      <a href="#about">نبذة</a> | 
+      <a href="#awards">الجوائز</a> | 
+      <a href="#works">الأعمال</a> | 
+      <a href="#contact">تواصل</a>
+    </nav>
   </header>
+
   <main>
-    <section>
-      <h2>نبذة شخصية</h2>
-      <p>مواليد 20 مايو 2004، مهتم وشغوف بمجال النحت والفن التشكيلي.</p>
+    <section id="about">
+      <h2>من هو ربيع شفيق؟</h2>
+      <p>
+        ربيع شفيق (المعروف أيضًا باسم <strong>مصطفى ربيع شفيق</strong>) هو 
+        <strong>نحات وفنان تشكيلي مصري شاب</strong> من الفيوم، وُلد في 20 مايو 2004.
+        يعتمد في أعماله على النحت البرونزي المعاصر لإنتاج تماثيل تجمع بين التعبيرية والتكوينات الهندسية والعضوية، ويواصل تطوير تجربة فنية شخصية تعكس الهوية المصرية.
+      </p>
     </section>
-    <section>
+
+    <section id="awards">
       <h2>المشاركات والجوائز</h2>
       <ul>
-        <li>مشاركة في صالون الشباب – الدورة 35 لعام 2024</li>
-        <li>مشاركة في مسابقة الشباب للفنون التشكيلية – الدورة 11 بمركز الحرية للإبداع لعام 2025</li>
-        <li>حاصل على الجائزة الثانية  – مسابقة الشباب للفنون التشكيلية الدورة 11 لعام 2025</li>
-        <li>مشاركة ف ملتقي بصمة المبدعين باتيلية القاهرة لعام 2025</li>
-        <li> مشاركة ف النسخة الثانية من الفن يجمعنا art egypt ف قاعة الاهرام للفنون لعام 2025 </li>
+        <li>مشاركة في <strong>صالون الشباب – الدورة 35 لعام 2024</strong></li>
+        <li>مشاركة في <strong>مسابقة الشباب للفنون التشكيلية – الدورة 11 بمركز الحرية للإبداع لعام 2025</strong></li>
+        <li>حاصل على <strong>الجائزة الثانية – مسابقة الشباب للفنون التشكيلية الدورة 11 لعام 2025</strong></li>
+        <li>مشاركة في ملتقى <strong>بصمة المبدعين – أتيليه القاهرة 2025</strong></li>
+        <li>مشاركة في النسخة الثانية من <strong>الفن يجمعنا – قاعة الأهرام للفنون 2025</strong></li>
       </ul>
     </section>
-    <section>
-      <h2>بعض الأعمال</h2>
-      <img src="https://www.instagram.com/reel/DKFJ_6otJwQ/?igsh=MTIyYTlqanYzanA0eg==" alt="عمل فني - مصطفى ربيع شفيق" />
+
+    <section id="works">
+      <h2>أعمال الفنان ربيع شفيق</h2>
+
+      <figure>
+        <img src="https://raw.githubusercontent.com/mostafarabea3/mostafarabea3.github.io/main/images/IMG_20250106_151640_040.jpg" alt="تمثال لاعب التنس من أعمال الفنان ربيع شفيق" loading="lazy" />
+        <figcaption>تمثال لاعب التنس – عمل برونزي</figcaption>
+      </figure>
+
+      <figure>
+        <img src="https://raw.githubusercontent.com/mostafarabea3/mostafarabea3.github.io/main/images/IMG_20241011_122324_549.jpg" alt="تمثال باندا برونزي من أعمال ربيع شفيق" loading="lazy" />
+        <figcaption>تمثال باندا – عمل فني برونزي</figcaption>
+      </figure>
+
     </section>
-    <section>
-      <h2>التواصل</h2>
+
+    <section id="contact">
+      <h2>تواصل مع الفنان ربيع شفيق</h2>
       <ul>
         <li>البريد الإلكتروني: <a href="mailto:most3f3r3be3@gmail.com">most3f3r3be3@gmail.com</a></li>
         <li>إنستجرام: <a href="https://www.instagram.com/mostaf3a.rabe3a?igsh=dGd0aWtxaDBtYXMx" target="_blank">@mostaf3a.rabe3a</a></li>
